added current survivor (least deaths) update to scoreboard
git-svn-id: http://twcore.org/svn/trunk@2135 9f8b3893-2a26-0410-9d00-a71e40fd2f77